# localcoder

./: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
docs/: P00-plan.md  S00-basic-chat.md  S06-config-system.md  S20-server-zh.md  S20-server.md  S21-repl-slash-menu.md
examples/: basic.rs  conversation.rs  custom_model.rs  error_handling.rs  streaming.rs
scripts/: update-changelog.sh
src/: api.rs  compact.rs  config.rs  engine.rs  git.rs  main.rs  markdown.rs  memory.rs  output_style.rs  plan.rs  repl.rs  repl_completion.rs  runtime.rs  server.rs  session.rs  skills.rs  terminal_style.rs  types.rs
src/services/lsp/: client.rs  manager.rs  types.rs
src/tools/: bash_tool.rs  file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  grep_tool.rs  lsp_tool.rs  mod.rs  plan_tools.rs  web_fetch.rs  web_search.rs
