[package]
name = "localcoder"
version = "0.1.1"
edition = "2024"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
# Async runtime
tokio = { version = "1.40", features = ["full"] }
# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# CLI interaction
rustyline = "14.0"
# Environment variables
dotenv = "0.15"
# Terminal colors
colored = "2.1"
# Stream processing
futures = "0.3"
bytes = "1.7"
# Markdown rendering
termimad = "0.30"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
