[package]
name = "localcoder"
version = "0.1.8"
edition = "2024"
description = "oxink."
license = "MIT"
readme = "README.md"
repository = "https://github.com/iamwjun/localcoder"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
# Async runtime
tokio = { version = "1.40", features = ["full"] }
# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
# CLI interaction
rustyline = "14.0"
# Terminal colors
colored = "2.1"
# File globbing (S03 GlobTool)
glob = "0.3"
# File walking with .gitignore support (S03 GrepTool)
ignore = "0.4"
# Regex engine (S03 GrepTool)
regex = "1"
serde_yaml = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
